Thu Oct  7 13:06:54 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/EM3ProjectCreator.pm:
        * modules/NMakeProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/WinVersionTranslator.pm:
        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added a windows version translator to deal with versions that
          contain letters and multiple decimal points.  See the comment in
          WinVersionTranslator for more details.

Thu Oct  7 13:03:28 2004  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeWorkspaceCreator.pm: Fixed the library location
          adjuster to adjust more than one library on a line.

Wed Oct  6 11:35:48 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Added a description of what this script does to the usage.

        * modules/GHSProjectCreator.pm:
        * modules/GHSWorkspaceCreator.pm:
        * templates/ghs.mpd:
        * templates/ghscommon.mpt:
        * templates/ghsdll.mpt:
        * templates/ghsdllexe.mpt:
        * templates/ghslib.mpt:
        * templates/ghslibexe.mpt:

          Increased the support for Green Hills Builder.  It still isn't
          complete as I have only tested it for Integrity.  I will need to
          test it for different platforms such as Solaris and Windows.

          Due to the way that the builder works, the -hierarchy option does
          not work and will never work with the ghs project type.

Tue Oct  5 10:21:20 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC71ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * templates/vc7.mpd:

          For vc7 and vc71, set the ForceConformanceInForLoopScope to TRUE.
          For vc8, that setting is deprecated so we do not set it at all.
